Bug fix css - input up one pixel when switch visibility

--- a/src/css/components/input.css
+++ b/src/css/components/input.css
@@ -15,10 +15,6 @@
   outline: none;
 }
 
-.input[type="password"] {
-  font-family: "Courier New", Courier, monospace;
-}
-
 .inp-error {
   border-color: var(--component-color-fail);
 }
